<resources>
    <string name="app_name">My Application</string>
    <string name="need_a_new_account">Need A New Account</string>
    <string name="welcome_to_hawkchat_app">Welcome to Hawkchat App</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="main_page">Main Page</string>
    <string name="log_out">Log Out</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="welcome_hawk_z_chat_app">Welcome Hawk\'z Chat App</string>
    <string name="create_an_account">Create an account</string>
    <string name="register">REGISTER</string>
    <string name="button">Button</string>
    <string name="welcome_to_hawkz_dimension">Welcome to Hawkz Dimension</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="login_or_register_to_get_started">Login or Register to get started</string>

    <string name="welcome_back">Welcome Back!</string>
    <string name="login_with_your_email_to_start_exploring">Login with your email to start exploring</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_names">Display Name</string>
    <string name="status">Status!</string>
    <string name="profile_image">Profile Image</string>
    <string name="default_status">Status</string>
       <string name="Hawkeye">Hawkeye</string>
    <string name="login">login</string>
    <string name="save_chnages">Save chnages</string>
    <string name="save_changes">save_changes</string>
    <string name="your_status">Your Status</string>
</resources>
